Atualizando o Node js, sharp

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -23,7 +23,7 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
-        text-fill-color: transparent; // Compatibilidade com navegadores modernos
+        text-emphasis-color: transparent; // Compatibilidade com navegadores modernos
       }
 
       h1 {
